2007/8/30 -- released version 2.2.2
* fixed links to slave graphs from chart mode -- tobi
* minor cosmetic fixes -- tobi

2007/8/30 -- released version 2.2.1
* minor cosmetic fixes -- tobi

2007/08/30 -- released version 2.2.0
*** all the new features in this release has been done under contract with DynDNS ***

* Added multi-host function (show data from several links in one graph) -- tobi
* Added stddev caclulation -- tobi
* Added slave support into detail graphs -- tobi
* Made interactive Graph zoomer somewhat work on ie6 and ie7 -- tobi
* Integrated interactive Graph zoomer -- Roman Plessl rplessl oetiker.ch
* first drop of the master/slave code added. now the debugging beginns. -- tobi
* fix uses of uninitialized value in the loss_background code
  -- niko, reported by yilmaz.atag *abs.gov.au
* added description of the master/slave mode I am implementing
  for dyndns -- tobi
* fixed smoke when there is a lot of 'loss' -- tobi
* do not use 127.0.0.1 when testing echoping and curl functionality. There may be someone
  behind this address. -- Michael Hanselmann public hansmi ch
* show all smoke in the detail graphs, even if it's out of the scale. -- niko,
  reported by Oskar Liljeblad <oskar *osk.mine.nu> as Debian bug #412826

2007/05/02 -- released version 2.1.1
* fixed scaling of detail graphs. They were all scaled to max_rtt
  if it was defined --tobi

2007/04/29 -- released version 2.1.0

* add new echoping 6 plugin probes: EchoPingDNS, EchoPingLDAP, EchoPingWhois
  -- niko
* don't test echoping or curl usage if running as a CGI --niko
* bail out at startup with an error message if LC_ALL is set --niko
* New Presentation option Charts. Charts are based on the new 'sorter' plugins.
  There are sample plugins for Loss, Max, Median, StdDev based Charts -- tobi
* new matcher Medratio (compare two medians) -- tobi
* fixes for Median matcher -- tobi
* make the CGI not croak if a password file is not readable. -- niko